# imagesToMultiboost

./: CMakeLists.txt
config/: castle-convertToIdx.config  castle-readPosterior.config  castle-test.config  castle-train.config  dagsthul-convertToIdx.config  dagsthul-readPosterior.config  dagsthul-test.config  dagsthul-train.config  dtu15-convertToIdx.config  dtu15-readPosterior.config  dtu15-test.config  fountain-convertToIdx.config  fountain-read.config  fountain-readPosterior.config  fountain-test.config  fountain-train.config  scanNet00-convertToIdx.config  scanNet00-read.config  scanNet00-readPosterior.config  scanNet00-test.config  scanNet00-train.config  southbuilding-convertToIdx.config  southbuilding-readPosterior.config  southbuilding-test.config  southbuilding-train.config  varcity-convertToIdx.config  varcity-read.config  varcity-readPosterior.config  varcity-test.config  varcity-train.config
include/imageToMultiboost/: Configurator.h  ProgressBar.h  types.hpp
src/: Configurator.cpp  Main.cpp  ProgressBar.cpp
src/old/: Main (copy).cpp.new.old  Mainttt.cpp.old
